<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/packet_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF888888"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/packet_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5px"
            android:text="@string/packet_number"
            android:textColor="#FFFFFF00" >
        </TextView>

        <TextView
            android:id="@+id/packet_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5px"
            android:textColor="#FFFFFF00" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/network_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/layer_3_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/layer_3"
            android:textColor="#FF888888" >
        </TextView>

        <LinearLayout
            android:id="@+id/network_protocol_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/network_protocol_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_protocol" >
            </TextView>

            <TextView
                android:id="@+id/network_protocol_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5px" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/network_src_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/src_network_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_src" >
            </TextView>

            <TextView
                android:id="@+id/src_network_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5px" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/network_dst_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dst_network_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_dst" >
            </TextView>

            <TextView
                android:id="@+id/dst_network_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5px" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transport_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/layer_4_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/layer_4"
            android:textColor="#FF888888" >
        </TextView>

        <LinearLayout
            android:id="@+id/transport_protocol_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/transport_protocol_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport_protocol" >
            </TextView>

            <TextView
                android:id="@+id/transport_protocol_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5px" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/transport_src_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/src_transport_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport_src" >
            </TextView>

            <TextView
                android:id="@+id/src_transport_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5px" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/transport_dst_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dst_transport_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport_dst" >
            </TextView>

            <TextView
                android:id="@+id/dst_transport_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5px" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/application_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/layer_5_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/layer_5"
            android:textColor="#FF888888" >
        </TextView>

        <LinearLayout
            android:id="@+id/application_protocol_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/application_protocol_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_protocol" >
            </TextView>

            <TextView
                android:id="@+id/application_protocol_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5px" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>